<resources>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="action_settings">Settings</string>
	<string name="app_name">江苏迈拓</string>
	<string name="app_name2">江苏迈拓2</string>
    <string name="login_webserverip">192.168.1.178</string>
    <string name="login_webserverport">8080</string>
    <string name="login_webservername">smsp</string>
    <string name="login_username">admin</string>
    <string name="login_password">admin1234</string>
    <string name="main_tab_name_report">查询</string>
    <string name="main_tab_name_device">仪表</string>
    <string name="main_tab_name_cmd">配置</string>
    <string name="main_tab_name_base" >基础</string>
    <string name="main_tab_name_charge" >收费</string>
    <string name="main_tab_name_notice" >报警</string>
    <string name="main_tab_name_more" >更多</string>
    <string name="copy">复制</string>
	<string name="delete">删除</string>
	<string name="copy_success">复制成功</string>
	<string name="deleting">正在删除…</string>
	<string name="delete_success">删除成功</string>
	<string name="delete_faile">删除失败</string>
	    <string name="gprs_1">序号</string>
    <string name="gprs_2">IMEI</string>
    <string name="gprs_3">状态</string>
    <string name="gprs_4">更新时间</string>
	    <string name="main_navigation_user">查询用户</string>
    <string name="user_village">选中小区</string>
    <string name="user_building">选中楼栋</string>
    <string name="user_entrance">选中单元</string>
    <string name="user_searchvillage">查询小区</string>
    <string name="user_searchbuilding">查询楼栋</string>
    <string name="user_searchdoorplate">查询门牌</string>
    <string name="user_searchentrance">查询单元</string>
    <string name="user_searchdoorplate1">查询门牌</string>
    <string name="user_sendtogprs">立即抄表</string>
    <string name="user_getfromgprs">查询数据</string>
    <string name="user_1">序号</string>
    <string name="user_2">门牌</string>
    <string name="user_3">姓名</string>
    <string name="user_4">类型</string>
    <string name="user_5">IMEI</string>
    <string name="user_6">编码</string>
	 <string name="main_navigation_report">查询报表</string>
    <string name="report_village">选中小区</string>
    <string name="report_building">选中楼栋</string>
    <string name="report_entrance">选中单元</string>
    <string name="report_searchvillage">查询小区</string>
    <string name="report_searchbuilding">查询楼栋</string>
    <string name="report_searchdoorplate">查询门牌</string>
    <string name="report_searchentrance">查询单元</string>
    <string name="report_searchdoorplate1">查询门牌</string>
    <string name="report_1">序号</string>
    <string name="report_2">单元</string>
    <string name="report_3">门牌</string>
    <string name="report_4">类型</string>
    <string name="report_5">IMEI</string>
    <string name="report_6">编码</string>
    <string name="report_7">阀门</string>
    <string name="report_8">压力(bar)</string>
    <string name="report_9">流量(m³)</string>
    <string name="report_10">瞬时(m³/h)</string>
    <string name="report_11">T1(℃)</string>
    <string name="report_12">抄表时间</string>
    <string name="report_13">状态</string>
    <string name="report_14">上传时间</string>
    <string name="hint_colection_no">输入采集器编码</string>
    <string name="hint_meter_no">输入出厂编码</string>
	    <string name="main_navigation_control">控制</string>
    <string name="control_imei">集中器编码</string>
    <string name="control_imeihint">请输入11位集中器编码</string>
    <string name="control_meterid">表出厂编码</string>
    <string name="control_meteridhint">请输入08位表出厂编码</string>
    <string name="control_openvalve">开阀</string>
    <string name="control_closevalve">关阀</string>
    <string name="control_readvalve">读阀</string>
    <string name="control_closembus">闭合MBUS</string>
    <string name="control_showmeterid">显示表号</string>
    <string name="control_showtotal">水量检定</string>
    <string name="control_showtime">显示时间</string>
    <string name="control_showA1">显示A1</string>
    <string name="control_showA2">显示A2</string>
    <string name="control_showA3">显示A3</string>
    <string name="control_showheat">显示热量</string>
    <string name="control_showdiv">显示分界点</string>
    <string name="control_showver">显示版本</string>
    <string name="home_imei">集中器编码</string>
    <string name="home_imeihint">请输入11位集中器编码</string>
    <string name="home_readmeter">读表</string>
    <string name="home_meterid">表出厂编码</string>
    <string name="home_meteridhint">请输入08位表出厂编码</string>
    <string name="home_producttype">表产品类型</string>
    <string name="home_1">名称</string>
    <string name="home_2">值</string>
    <string name="home_3">单位</string>
	    <string name="app_error">应用程序错误</string>
    <string name="app_error_message">很抱歉，小屁孩耍脾气啦。<br/>我们会帮你教训一下这个小屁孩！</string>
    <string name="submit_report">打报告去</string>
    <string name="menu_rss">订阅</string>
    <string name="menu_opensoft">开源软件</string>
    <string name="menu_blog">博客区</string>
    <string name="menu_quests">技术问答</string>
    <string name="menu_setting">设置</string>
    <string name="menu_exit">退出</string>
    <string name="quick_option_text">文字</string>
    <string name="quick_option_album">相册</string>
    <string name="quick_option_photo">拍照</string>
    <string name="quick_option_voice">语音</string>
    <string name="quick_option_note">便签</string>
    <string name="quick_option_scan">扫一扫</string>
    <string name="quick_option_find">找人</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="loading">加载中…</string>
    <string name="loading_no_more">已加载全部</string>
    <string name="error_view_click_to_refresh">点击屏幕,重新加载</string>
    <string name="error_view_no_data">暂无内容</string>
    <string name="error_view_loading">加载中…</string>
    <string name="error_view_load_error_click_to_refresh">内容加载失败\r\n点击重新加载</string>
    <string name="error_view_network_error_click_to_refresh">没有可用的网络</string>
    <string name="tip_network_error">没有可用的网络</string>
    <string name="unlogin">未登录，请先登录</string>
    <string name="unlogin_tip">您还未登录\r\n或网络延迟</string>
    <string name="my_information_unlogin_tips">未登录</string>
    <string name="hint_serviceip">输入域名/IP</string>
    <string name="hint_serviceport">输入端口号</string>
    <string name="hint_servicename">输入项目名称</string>
    <string name="hint_username">输入账号</string>
    <string name="hint_password">密码</string>
    <string name="login">登录</string>
    <string name="tip_please_input_serviceip">请输入服务器域名或IP</string>
    <string name="tip_please_input_serviceport">请输入服务器端口号</string>
    <string name="tip_please_input_servicename">请输入服务名称</string>
    <string name="tip_please_input_username">请输入用户名</string>
    <string name="tip_illegal_email">请输入正确的email地址</string>
	<string name="tip_please_input_password">请输入密码</string>
    <string name="progress_login">正在登录…</string>
    <string name="progress_Loading">正在加载数据…</string>
    <string name="tip_login_error_for_network">对不起,无法登录</string>
    <string name="tip_no_internet">当前没有可用的网络链接</string>
    <string name="tip_login_success">登陆成功！</string>
    <string name="tip_login_nodata">对不起,无数据！</string>
    <string name="actionbar_title_news">资讯详情</string>
    <string name="actionbar_title_blog">博客详情</string>
    <string name="actionbar_title_software">软件详情</string>
    <string name="actionbar_title_question">帖子详情</string>
    <string name="actionbar_title_tweet">动弹详情</string>
    <string name="actionbar_title_event_detail">活动详情</string>
    <string name="actionbar_title_event_location">活动地址</string>
    <string name="actionbar_title_detail">详情</string>
    <string name="actionbar_title_active">好友圈</string>
    <string name="actionbar_title_mes">消息中心</string>
    <string name="actionbar_title_message_detail">对话</string>
    <string name="share_to">分享到</string>
    <string name="platform_qq">QQ</string>
	<string name="platform_copy_link">复制链接</string>
	<string name="platform_more_option">更多</string>
	<string name="platform_sina">微博</string>
	<string name="platform_weichat">微信</string>
	<string name="platform_weichat_circle">朋友圈</string>
	<string name="share_title">开源中国分享</string>
	<string name="share_title_news">开源中国资讯分享</string>
	<string name="share_title_blog">开源中国博客分享</string>
	<string name="share_title_soft">开源中国软件分享</string>
	<string name="share_title_post">开源中国帖子分享</string>
	<string name="tip_start_share">开始分享…</string>
	<string name="tip_share_done">分享完成</string>
	<string name="detail_menu_unfavorite">取消收藏</string>
    <string name="detail_menu_favorite">收藏</string>
    <string name="detail_menu_for_share">分享</string>
    <string name="detail_menu_for_report">举报</string>
	<string name="add_favorite_success">收藏成功</string>
	<string name="add_favorite_faile">收藏失败</string>
	<string name="del_favorite_success">已取消收藏</string>
	<string name="del_favorite_faile">取消收藏失败</string>
	<string name="actionbar_title_question_tag">%s相关</string>
    <string name="comment_count">评论(%s)</string>
    <string name="comment_empty">暂无评论</string>
    <string name="answer_count">回复(%s)</string>
    <string name="post_answer">回复</string>
    <string name="comment_reply_count">---共有%s条回复---</string>
    <string name="comment_refer_author">引用来自%s的评论</string>
	<string name="tip_comment_content_empty">评论内容不能为空</string>
	<string name="comment_blog">发布评论</string>
	<string name="comment_publishing">正在发布你的评论…</string>
	<string name="comment_publish_success">评论成功</string>
	<string name="comment_publish_faile">评论失败</string>
	<string name="progress_submit">正在提交…</string>
	<string name="tweet_public">发布动弹</string>
	<string name="tweet_hint">今天你动弹了吗？</string>
	<string name="tweet_publishing">正在发布你的动弹…</string>
	<string name="tweet_publish_success">动弹发布成功</string>
	<string name="tweet_publish_faile">发布动弹失败</string>
	<string name="tweet_play_faile">动弹播放失败</string>
	<string name="tweet_audio_faile">语音动弹发布失败</string>
	<string name="cancle_record">取消录音</string>
	<string name="record_sound_notfound">找不到录音</string>
	<string name="record_sound_short">时间太短了</string>
	<string name="ok">确定</string>
	<string name="cancle">取消</string>
	<string name="clean_cache_mes">是否清空缓存?</string>
	<string name="draft_tweet_message">是否保存为草稿?</string>
	<string name="clearwords">是否清空内容?</string>
	<string name="choose_picture">选择图片</string>
	<string name="tip_content_empty">内容不能为空</string>
	<string name="tip_content_too_long">内容太长</string>
	<string name="actionbar_title_softwarelist">开源软件</string>
	<string name="actionbar_title_comment">评论列表</string>
	<string name="actionbar_title_questions">技术问答</string>
	<string name="actionbar_title_tweetpub">弹一弹</string>
	<string name="actionbar_title_softtweet">软件动弹列表</string>
	<string name="actionbar_title_user_center">用户中心</string>
	<string name="actionbar_title_user_blog">用户博客列表</string>
	<string name="actionbar_title_user_favorite">用户收藏</string>
	<string name="actionbar_title_my_information">我的资料</string>
	<string name="actionbar_title_my_friends">关注/粉丝</string>
	<string name="actionbar_title_setting">设置</string>
	<string name="actionbar_title_setting_notification">新消息提醒</string>
	<string name="actionbar_title_about_osc">关于开源中国</string>
	<string name="actionbar_title_note">便签</string>
	<string name="actionbar_title_noteedit">编辑便签</string>
	<string name="actionbar_title_shake">摇一摇</string>
	<string name="actionbar_title_search">搜索</string>
	<string name="actionbar_title_find_user"></string>
	<string name="actionbar_title_event">活动</string>
	<string name="actionbar_title_event_apply">活动出席人员</string>
	<string name="actionbar_title_same_city">同城</string>
	<string name="actionbar_title_blog_area">博客区</string>
    <string name="private_message">私信</string>
    <string name="follow_user">关注</string>
    <string name="unfollow_user">取消关注</string>
    <string name="follow_each_other">取消互粉</string>
    <string name="latest_login_time">最近登录  %s</string>
    <string name="actionbar_title_profile">个人中心</string>
    <string name="favorite">收藏</string>
</resources>